--- a/views/logged-in.ejs
+++ b/views/logged-in.ejs
@@ -10,6 +10,7 @@
 <body>
     <h1>Grattis <span style="<%=style%>">  <%= name %> </span>du är inloggad</h1>
     <button onclick="getUserName()">username</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, fugit.</p>
     <script>
         function getUserName(){
             fetch('http://localhost:3000/api/getuser')
