added tailwind css to login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,16 +8,15 @@
     <title>Login</title>
 </head>
 <body class="bg-gray-100">
-    <div class="h-screen w-full flex items-center justify-center">
-        <div class="p-10 rounded-2xl shadow-xl">
+    <div class="h-screen w-full flex items-center justify-center ">
+        <div class="p-10 rounded-2xl shadow-xl border border-gray-200 border-solid">
             <div class="flex justify-center">
                 <h1>Apple</h1>
             </div>
-            <h1>Login screen</h1>
-            <form method="post" action="/login">
-                <input type="text" name="email" id="" placeholder="email">
-                <input type="text" name="password" id="" placeholder="password">
-                <button type="submit">Skicka</button>
+            <form method="post" action="/login" class="flex flex-col items-center">
+                <input  type="text" name="email" id="" placeholder="email" class="rounded-md p-2 m-2 border border-gray-200 border-solid">
+                <input type="text" name="password" id="" placeholder="password" class="rounded-md p-2 m-2 border border-gray-200 border-solid">
+                <button type="submit" class="bg-green-300 p-2 w-16 rounded text-white hover:bg-red-300" >Skicka</button>
             </form>
         </div>
         <!-- <a href="/index.html">Gå hem</a> -->
